# LT

./: .gitignore  README.md  gpio-sloppy-logic-analyzer.rst  main.py  pyproject.toml  test.py  translate.sh
src/lt/: translator.py
src/lt/agent/: __init__.py  agent.py  nllb.py
tests/: prompt.md  test.py  test_llm.py
