[project]
name = "LT"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "TurtleRuss", email = "tttturtleruss@gmail.com"},
]
dependencies = [
    "openai>=1.32.0",
    "transformers>=4.41.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPL-only-v3.0"}


[tool.pdm]
distribution = false
